# SearchEngine

./: CMakeLists.txt  ConverterJSON.h  InvertedIndex.h  ProgrammExceptions.h  README.md  SearchServer.h  config.json  main.cpp  request.json
include/: ConverterJSON.h  CustomExceptions.h  InvertedIndex.h  SearchEngine.h
json_files/: answers.json  config.json  requests.json
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchEngine_test.cpp
